// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart table suite 1 Indicator, 1 Area snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c12 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c12 > p {
  margin: 0;
}

.c12 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c12 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c12 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c9 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c19 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c19:last-child {
  padding-right: 0;
}

.c27 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c27:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c15 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c16 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  vertical-align: top;
}

.c17 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c20 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding-right: 0;
}

.c21 {
  text-align: right;
  padding-right: 10px;
}

.c22 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c23 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c28 {
  text-align: left;
  width: 10%;
}

.c29 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
  padding-right: 0.5em;
  padding-left: 10px;
}

.c30 {
  text-align: center;
  padding-left: 10px;
  padding-right: 10px;
}

.c31 {
  width: 10%;
}

.c5 {
  text-align: left;
  vertical-align: top;
  padding-left: 10px;
}

.c24 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
  padding-right: 0.5em;
}

.c0 {
  overflow-x: auto;
  width: 100%;
}

.c32 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c13 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  position: relative;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
}

.c14 {
  border-top: solid #F3F2F1 2px;
  text-align: center;
}

.c2 {
  border-collapse: separate;
}

.c25 {
  padding: 0.6em;
  text-align: center;
}

.c18 {
  padding: 0.5em;
  text-align: center;
  vertical-align: top;
  white-space: nowrap;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 0;
  white-space: nowrap;
}

.c26 {
  display: block;
}

.c6 {
  border: none;
}

.c7 {
  padding-left: 0px;
}

@media print {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media print {
  .c12 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    margin-bottom: 20px;
  }
}

@media print {
  .c9 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c9 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c27 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c20 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c20 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c13 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c13 {
    font-size: 16px;
    line-height: 1.25;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 c2"
      id="lineChartTable"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3 c4 c5 c6"
          />
          <th
            class="c3 c4 c5 c7"
            colspan="5"
          >
            <div
              class="c8"
            >
              Recent trend:
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c9 c10"
                >
                  <div
                    class="c11"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c12 c13"
                      >
                        <p>
                          No recent trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
          />
          <th
            class="c3 c4 c5 c14"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 c4 c15 c16 c17"
            data-testid="england-header"
          >
             
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="4"
          />
          <th
            class="c3 c4 c5 c18"
            colspan="2"
          >
            95%
            <br />
            confidence
            <br />
            limits
          </th>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 8 c4 c5 c24"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c3 c4 c5 c25"
            data-testid="header-Compared to benchmark-0"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Count-0"
          >
            Count
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Value-0"
          >
            Value
            <span
              class="c26"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Lower-0"
          >
            Lower
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Upper-0"
          >
            Upper
          </th>
          <th
            class="c3 c4 c15 c16 c17"
            data-testid="england-subheader"
          >
            Value  
            <span
              class="c26"
            >
              %
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c27 c20 c28 c29"
          >
            2004
          </td>
          <td
            class="1 c19 c30 c31"
          >
            <strong
              class="c9 c32"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c27 c20 c21"
          >
            267
          </td>
          <td
            class="c27 c20 c21"
          >
            703.4
          </td>
          <td
            class="c27 c20 c21"
          >
            441.7
          </td>
          <td
            class="c27 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          >
            904.9
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c27 c20 c28 c29"
          >
            2008
          </td>
          <td
            class="1 c19 c30 c31"
          >
            <strong
              class="c9 c32"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c27 c20 c21"
          >
            222
          </td>
          <td
            class="c27 c20 c21"
          >
            890.3
          </td>
          <td
            class="c27 c20 c21"
          >
            441.7
          </td>
          <td
            class="c27 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          >
            966.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  .c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00703c;
  box-shadow: 0 2px 0 #002413;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 22px;
}

.c0:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c0:link,
.c0:visited,
.c0:active,
.c0:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.c0:hover,
.c0:focus {
  background-color: #00572e;
}

.c0:active {
  top: 2px;
  box-shadow: none;
}

.c0::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.c0:active::before {
  top: -4px;
}

.c0:disabled {
  opacity: 0.5;
  background: #00703c;
}

.c0:disabled:hover {
  background-color: #00703c;
  cursor: default;
}

.c0:disabled:focus {
  outline: none;
}

.c0:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #002413;
}

.c0 svg {
  max-width: 15px;
}

.c1 {
  margin-top: 1rem;
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    width: auto;
  }
}

@media only screen and (min-width:641px) {
  .c0 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 32px;
  }
}

@media print {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

<button
    class="c0 c1"
  >
    Export options
  </button>
</DocumentFragment>
`;

exports[`Line chart table suite 1 Indicator, 2 Areas snapshot test - should match snapshot 1`] = `
<DocumentFragment>
  .c12 {
  margin: 0;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  margin-bottom: 15px;
}

.c12 > p {
  margin: 0;
}

.c12 > p > code {
  padding: 0.2em 0.4em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27,31,35,0.05);
  border-radius: 3px;
}

.c12 > pre {
  padding: 16px;
  overflow: auto;
  font-size: 85%;
  line-height: 1.45;
  background-color: #f6f8fa;
  border-radius: 3px;
}

.c12 > pre > code {
  display: inline;
  padding: 0;
  margin: 0;
  border: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
}

.c9 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  font-size: 14px;
  line-height: 1;
  display: inline-block;
  padding-top: 5px;
  padding-right: 8px;
  padding-bottom: 4px;
  padding-left: 8px;
  outline: 2px solid transparent;
  outline-offset: -2px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #1d70b8;
  color: #ffffff;
}

.c3 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
  font-weight: 700;
}

.c3:last-child {
  padding-right: 0;
}

.c19 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: left;
}

.c19:last-child {
  padding-right: 0;
}

.c28 {
  padding: 10px 20px 10px 0;
  border-bottom: 1px solid #bfc1c3;
  text-align: right;
  font-family: "ntatabularnumbers","nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
}

.c28:last-child {
  padding-right: 0;
}

.c1 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  width: 100%;
  border-spacing: 0;
  border-collapse: collapse;
  margin-bottom: 20px;
}

.c4 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  font-weight: bold;
  padding: 0.625em 0;
}

.c15 {
  text-align: right;
  padding-right: 10px;
  vertical-align: top;
}

.c16 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
  vertical-align: top;
}

.c17 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c20 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  padding-right: 0;
}

.c21 {
  text-align: right;
  padding-right: 10px;
}

.c22 {
  background-color: #B1B4B6;
  border-top: solid #F3F2F1 2px;
}

.c23 {
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  z-index: 10;
  border-left: solid black 1px;
  padding-left: 0.5em;
  padding-right: 0.5em !important;
}

.c29 {
  text-align: left;
  width: 10%;
}

.c30 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
  padding-right: 0.5em;
  padding-left: 10px;
}

.c31 {
  text-align: center;
  padding-left: 10px;
  padding-right: 10px;
}

.c32 {
  width: 10%;
}

.c5 {
  text-align: left;
  vertical-align: top;
  padding-left: 10px;
}

.c24 {
  position: -webkit-sticky;
  position: sticky;
  left: 0;
  background-color: #FFFFFF;
  z-index: 10;
  border-right: solid black 1px;
  padding-right: 0.5em;
}

.c0 {
  overflow-x: auto;
  width: 100%;
}

.c33 {
  padding: 5px 8px 4px 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.3125em;
  font-weight: 300;
  text-transform: unset;
  background-color: transparent;
  color: #0B0C0C;
  border: 1px solid #0B0C0C;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  text-transform: unset;
  margin: 0.3125em;
  color: #303436;
  background-color: #E1E2E3;
}

.c13 {
  margin-bottom: 0;
  margin-left: 0.3125em;
  position: relative;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.1428571428571428;
}

.c14 {
  border-top: solid #F3F2F1 2px;
  text-align: center;
}

.c2 {
  border-collapse: separate;
}

.c25 {
  padding: 0.6em;
  text-align: center;
}

.c27 {
  border-left: solid black 1px;
}

.c18 {
  padding: 0.5em;
  text-align: center;
  vertical-align: top;
  white-space: nowrap;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  padding-left: 0;
  white-space: nowrap;
}

.c34 {
  border-left: solid black 1px;
  text-align: center;
}

.c26 {
  display: block;
}

.c6 {
  border: none;
}

.c7 {
  padding-left: 0px;
}

@media print {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media print {
  .c12 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media only screen and (min-width:641px) {
  .c12 {
    margin-bottom: 20px;
  }
}

@media print {
  .c9 {
    font-size: 14px;
    line-height: 1;
  }
}

@media only screen and (min-width:641px) {
  .c9 {
    font-size: 16px;
    line-height: 1;
  }
}

@media print {
  .c28 {
    font-family: sans-serif;
  }
}

@media print {
  .c1 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c1 {
    color: #000;
  }
}

@media only screen and (min-width:641px) {
  .c1 {
    margin-bottom: 30px;
  }
}

@media print {
  .c4 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c4 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c20 {
    font-size: 14px;
    line-height: 1.15;
  }
}

@media only screen and (min-width:641px) {
  .c20 {
    font-size: 19px;
    line-height: 1.3157894736842106;
  }
}

@media print {
  .c13 {
    font-size: 14px;
    line-height: 1.2;
  }
}

@media only screen and (min-width:641px) {
  .c13 {
    font-size: 16px;
    line-height: 1.25;
  }
}

<div
    class="c0"
    data-testid="lineChartTable-component"
  >
    <table
      class="c1 c2"
      id="lineChartTable"
    >
      <thead
        class=""
      >
        <tr
          class=""
        >
          <th
            class="c3 c4 c5 c6"
          />
          <th
            class="c3 c4 c5 c7"
            colspan="5"
          >
            <div
              class="c8"
            >
              Recent trend:
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c9 c10"
                >
                  <div
                    class="c11"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c12 c13"
                      >
                        <p>
                          No recent trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
          <th
            class="c3 c4 c5 c7"
            colspan="5"
          >
            <div
              class="c8"
            >
              Recent trend:
              <div
                data-testid="trendTag-container"
              >
                <strong
                  class="c9 c10"
                >
                  <div
                    class="c11"
                    data-testid="trend-tag-component"
                  >
                    <div>
                      <div
                        class="c12 c13"
                      >
                        <p>
                          No recent trend data available
                        </p>
                      </div>
                    </div>
                  </div>
                </strong>
              </div>
            </div>
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
          />
          <th
            class="c3 c4 c5 c14"
            colspan="5"
          >
            Greater Manchester ICB - 00T
          </th>
          <th
            class="c3 c4 c5 c14"
            colspan="5"
          >
            South FooBar
          </th>
          <th
            class="c3 c4 c15 c16 c17"
            data-testid="england-header"
          >
             
            <br />
             England
          </th>
        </tr>
        <tr
          class=""
        >
          <th
            class="c3"
            colspan="4"
          />
          <th
            class="c3 c4 c5 c18"
            colspan="2"
          >
            95%
            <br />
            confidence
            <br />
            limits
          </th>
          <th
            class="c3"
            colspan="3"
          />
          <th
            class="c3 c4 c5 c18"
            colspan="2"
          >
            95%
            <br />
            confidence
            <br />
            limits
          </th>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          />
        </tr>
        <tr
          class=""
        >
          <th
            class="c3 8 c4 c5 c24"
            data-testid="header-Period-0"
          >
            Period
          </th>
          <th
            class="c3 c4 c5 c25"
            data-testid="header-Compared to benchmark-0"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Count-0"
          >
            Count
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Value-0"
          >
            Value
            <span
              class="c26"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Lower-0"
          >
            Lower
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Upper-0"
          >
            Upper
          </th>
          <th
            class="c3 c4 c5 c25 c27"
            data-testid="header-Compared to benchmark-1"
          >
            Compared to benchmark
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Count-1"
          >
            Count
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Value-1"
          >
            Value
            <span
              class="c26"
            >
               %
            </span>
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Lower-1"
          >
            Lower
          </th>
          <th
            class="c3 c4 c15"
            data-testid="header-Upper-1"
          >
            Upper
          </th>
          <th
            class="c3 c4 c15 c16 c17"
            data-testid="england-subheader"
          >
            Value  
            <span
              class="c26"
            >
              %
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class=""
        >
          <td
            class="0 c28 c20 c29 c30"
          >
            2004
          </td>
          <td
            class="1 c19 c31 c32"
          >
            <strong
              class="c9 c33"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c28 c20 c21"
          >
            267
          </td>
          <td
            class="c28 c20 c21"
          >
            703.4
          </td>
          <td
            class="c28 c20 c21"
          >
            441.7
          </td>
          <td
            class="c28 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c29 c34"
          >
            <strong
              class="c9 c33"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c28 c20 c21"
          >
            222
          </td>
          <td
            class="c28 c20 c21"
          >
            135.1
          </td>
          <td
            class="c28 c20 c21"
          >
            441.7
          </td>
          <td
            class="c28 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          >
            904.9
          </td>
        </tr>
        <tr
          class=""
        >
          <td
            class="0 c28 c20 c29 c30"
          >
            2008
          </td>
          <td
            class="1 c19 c31 c32"
          >
            <strong
              class="c9 c33"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c28 c20 c21"
          >
            222
          </td>
          <td
            class="c28 c20 c21"
          >
            890.3
          </td>
          <td
            class="c28 c20 c21"
          >
            441.7
          </td>
          <td
            class="c28 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c29 c34"
          >
            <strong
              class="c9 c33"
            >
              Not compared
            </strong>
          </td>
          <td
            class="c28 c20 c21"
          >
            222
          </td>
          <td
            class="c28 c20 c21"
          >
            135.1
          </td>
          <td
            class="c28 c20 c21"
          >
            441.7
          </td>
          <td
            class="c28 c20 c21"
          >
            578.3
          </td>
          <td
            class="c19 c20 c21 c22 c23"
            data-testid="england-cell"
          >
            966.0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  .c0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  width: 100%;
  margin-top: 0;
  padding: 7px 10px;
  border: 2px solid transparent;
  border-radius: 0;
  color: #ffffff;
  background-color: #00703c;
  box-shadow: 0 2px 0 #002413;
  text-align: center;
  vertical-align: top;
  cursor: pointer;
  -webkit-appearance: none;
  margin-bottom: 22px;
}

.c0:focus {
  outline: 3px solid #ffdd00;
  outline-offset: 0;
}

.c0:link,
.c0:visited,
.c0:active,
.c0:hover {
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0::-moz-focus-inner {
  padding: 0;
  border: 0;
}

.c0:hover,
.c0:focus {
  background-color: #00572e;
}

.c0:active {
  top: 2px;
  box-shadow: none;
}

.c0::before {
  content: "";
  display: block;
  position: absolute;
  top: -2px;
  right: -2px;
  bottom: -4px;
  left: -2px;
  background: transparent;
}

.c0:active::before {
  top: -4px;
}

.c0:disabled {
  opacity: 0.5;
  background: #00703c;
}

.c0:disabled:hover {
  background-color: #00703c;
  cursor: default;
}

.c0:disabled:focus {
  outline: none;
}

.c0:disabled:active {
  top: 0;
  box-shadow: 0 2px 0 #002413;
}

.c0 svg {
  max-width: 15px;
}

.c1 {
  margin-top: 1rem;
}

@media print {
  .c0 {
    font-size: 14px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    font-size: 19px;
    line-height: 19px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    width: auto;
  }
}

@media only screen and (min-width:641px) {
  .c0 svg {
    margin-left: 10px;
  }
}

@media only screen and (min-width:641px) {
  .c0 {
    margin-bottom: 32px;
  }
}

@media print {

}

@media only screen and (min-width:641px) {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

@media print {

}

@media only screen and (min-width:641px) {

}

<button
    class="c0 c1"
  >
    Export options
  </button>
</DocumentFragment>
`;
